[package]
name = "onedrive_driver_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = {version = "0.13.2",features = ["json","stream","form"]}
percent-encoding = "2.3.2"
serde = {version = "1.0.228",features = ["derive"]}
futures = "0.3"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version = "1.51.1",features = ["full"]}
tower = "0.5.3"
tower-http = {version = "0.6.8",features = ["cors","fs"]}
bytes = "1.11.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
